# simple-voice

./: .gitignore  LICENSE  README.md  pyproject.toml  record_test_file.py  simple_voice.py  try_listener.py  try_vad.py  vad.py
src/simple_voice/: __init__.py  simple_voice.py  stt.py
tests/: test_simple_voice.py  test_stt.py  test_vad.py
