[project]
name = "simple_voice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andrea Cappelli", email = "kattasc@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "numpy>=2.2.6",
    "onnxruntime>=1.22.0",
    "sounddevice>=0.5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
